<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_surface">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/ocean_surface"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/ocean_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Left-aligned three-dot menu icon -->
    <ImageView
        android:id="@+id/overflowLeft"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:contentDescription="@string/menu_version"
        app:tint="@color/ocean_text"
        android:src="@android:drawable/ic_menu_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/iconView"
        android:layout_width="88dp"
        android:layout_height="88dp"
        app:tint="@color/ocean_primary"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_flash_off_24" />

    <Button
        android:id="@+id/toggleButton"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:background="@drawable/bg_button_ocean"
        android:textColor="@color/ocean_surface_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconView"
        app:layout_constraintBottom_toTopOf="@+id/statusText"
        android:text="@string/turn_on" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash_off"
        android:textColor="@color/ocean_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
